# usgs-nlcd

./: .isort.cfg  CHANGELOG.md  README-template.md  README.md  docker_env  environment.yml  mypy.ini  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: conf.py  index.rst  installation_and_basic_usage.ipynb
examples/: collection.json  item.json
scripts/: lint
src/stactools/usgs_nlcd/: __init__.py  cog.py  commands.py  constants.py  stac.py
src/stactools/usgs_nlcd/license/: license.txt
tests/: test_commands.py  test_module.py  test_stac.py
tests/data-files/: nlcd_2019_land_cover_l48_20210604.xml
