[metadata]
name = stactools-usgs-nlcd
version = attr: stactools.usgs_nlcd.__version__
description = PROVIDE DESCRIPTION HERE
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/usgs-nlcd
project_urls =
    Documentation = https://stactools-usgs-nlcd.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/usgs-nlcd/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.1

[options.packages.find]
where = src
